--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,3 +1,9 @@
 // --------------------------------------------------------------------------
 // -- You can add your custom CSS here and it will overwrite template styles.
 // --------------------------------------------------------------------------
+.required {
+    &::before {
+        content: '*';
+        color: #f33;
+    }
+}
