--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -151,7 +151,7 @@
    $theme-scheme: register-scheme(map_merge((
       name:         theme,
       // colors
-      main:         #ff3333,
+      main: #275CAA, //#ff3333,
       opposite:     #fff, opposite-font-weight-map: $font-weight-decrease-map,
       opposite-alt: #fff,
       muted:        #ffcccc,
